core/interpreter/src/test/resources/Interpreter_PP_Classes_TestSuite_External/PP/error/instvars/instvars-17.vpp.entry
new A().Test() -- = Run-Time Error 120: Unknown state component